# go-issue-33492

./: .bazelrc  README.md  WORKSPACE
cargo/: BUILD.bazel  Cargo.toml  crates.bzl
cargo/remote/: alloc-cortex-m-0.3.5.BUILD.bazel  cortex-m-0.1.8.BUILD.bazel  linked_list_allocator-0.6.4.BUILD.bazel  quote-0.6.13.BUILD.bazel  syn-0.15.42.BUILD.bazel  synstructure-0.10.2.BUILD.bazel  volatile-register-0.1.2.BUILD.bazel  zeroize-0.9.3.BUILD.bazel  zeroize_derive-0.9.3.BUILD.bazel
go/: BUILD.bazel  hello.go  hello.s
rust/: BUILD.bazel  lib.rs
tools/: go_rust.bzl  rust_nightly_toolchains.bzl
